# KG_RAG

./: .gitignore  .gpt_config.env  README.md  config.yaml  pid_info.sh  requirements.txt  system_prompts.yaml
kg_rag/: LICENSE.txt  README.md  pyproject.toml  run_setup.py  utility.py
kg_rag/prompt_based_generation/GPT/: run_mcq_qa.py  run_true_false_generation.py  text_generation.py
kg_rag/prompt_based_generation/Llama/: run_mcq_qa.py  run_mcq_qa_medgpt.py  run_true_false_generation.py  text_generation.py
kg_rag/prompt_based_text_generation/Galactica/: text_generation_Galactica.py  true_false_generation_Galactica_HuggingFace.py
kg_rag/prompt_based_text_generation/Llama/: text_generation_Llama_HuggingFace.py  true_false_generation_Llama_HuggingFace.py
kg_rag/rag_based_generation/GPT/: drug_action.py  drug_repurposing_v2.py  run_drug_repurposing.py  run_mcq_qa.py  run_one_hop_traversal_hyperparameter_tuning.py  run_single_disease_entity_hyperparameter_tuning.py  run_true_false_generation.py  run_two_disease_entity_hyperparameter_tuning.py  run_two_hop_traversal_hyperparameter_tuning.py  text_generation.py
kg_rag/rag_based_generation/Llama/: run_drug_repurposing.py  run_mcq_qa.py  run_mcq_qa_medgpt.py  run_true_false_generation.py  text_generation.py
kg_rag/rag_based_text_generation/Llama/: rag_with_retrieval_threshold_Ollama_and_LlamaCpp.py  (+2 more)
kg_rag/retrieval_analysis/: check_true_false_questions_have_spoke_context.py  estimation_of_retrieval_score_for_sentence_embedding_model.py
kg_rag/shell_scripts/: create_vectordb_using_langchain.sh  estimation_of_retrieval_score_for_sentence_embedding_model.sh  llm_using_llama_cpp_and_langchain.sh  rag_with_retrieval_threshold_HuggingFace.sh  rag_with_retrieval_threshold_for_true_false_generation_Llama_HuggingFace.sh
kg_rag/test/: test_vectordb.py
kg_rag/tests/: __init__.py
kg_rag/vectorDB/: create_vectordb.py
(+248 files in other folders)
